= RSpec Changelog
wazup

== Version 0.9.3
* Fixed [#10594] Failing Custom Matcher show NAME NOT GENERATED description
* describe(SomeType, "message") will have a decription with a space: "SomeType message"
* Applied [#10566] prepend_before and prepend_after callbacks
* Applied [#10567] Call setup and teardown using before and after callbacks

== Version 0.9.2
This is a quick maintenance release. 

* Added some website love
* Fixed [#10542] reverse predicate matcher syntax
* Added a spec:translate Rake task to make 0.9 translation easier with Spec:Rails
* Better translation of should_redirect_to
* Fixed --colour support for Windows. This is a regression that was introduced in 0.9.1
* Applied [#10460] Make SpecRunner easier to instantiate without using commandline args

== Version 0.9.1

This release introduces #describe and #it (aliased as #context and #specify for
backwards compatibility). This allows you to express specs like this:

  describe SomeClass do # Creates a Behaviour
    it "should do something" do # Creates an Example
    end
  end

The command line features four new options that give you more control over what specs
are being run and in what order. This can be used to verify that your specs are
independent (by running in opposite order with --reverse). It can also be used to cut 
down feedback time by running the most recently modified specs first (--loadby mtime --reverse).

Further, --example replaces the old --spec option, and it can now take a file name of
spec names as an alternative to just a spec name. The --format failing_examples:file.txt 
option allows you to output an --example compatible file, which makes it possible to only 
rerun the specs that failed in the last run. Spec::Rails uses all of these four options 
by default to optimise your RSpec experience.

There is now a simple configuration model. For Spec::Rails, you do something like this:

  Spec::Runner.configure do |config|
    config.use_transactional_fixtures = true