@@ -1,8 +1,9 @@
 = RSpec Changelog
-wazup
+This is a bugfix release.
 
 == Version 0.9.3
 * Fixed [#10594] Failing Custom Matcher show NAME NOT GENERATED description
+* describe(SomeType, "#message") will not add a space: "SomeType#message" (likewise for '.')
 * describe(SomeType, "message") will have a decription with a space: "SomeType message"
 * Applied [#10566] prepend_before and prepend_after callbacks
 * Applied [#10567] Call setup and teardown using before and after callbacks
